--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -8,11 +8,20 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Nathan da Silva portfolio." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+
+  <meta property=’og:title’ content='Nathan Silva' />
+  <meta property=’og:image’ content='https://i.ibb.co/rpJqJvC/Screenshot-4.png' />
+  <meta property=’og:description’ content='Nathan da Silva portfolio.' />
+  <meta property=’og:url’ content='https://nathandasilva.com' />
+  <meta property='og:image:width' content='1200' />
+  <meta property='og:image:height' content='627' />
+
+  <meta property="og:type" content='website'/>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
