--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
   <meta property=’og:title’ content='Nathan Silva' />
-  <meta property=’og:image’ content='https://i.ibb.co/rpJqJvC/Screenshot-4.png' />
+  <meta name="image" property=’og:image’ content='https://i.ibb.co/rpJqJvC/Screenshot-4.png' />
   <meta property=’og:description’ content='Nathan da Silva portfolio.' />
   <meta property=’og:url’ content='https://nathandasilva.com' />
   <meta property='og:image:width' content='1200' />
