--- a/react-portfolio/public/index.html
+++ b/react-portfolio/public/index.html
@@ -9,10 +9,10 @@
   <meta name="description" content="Nathan da Silva portfolio." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
 
-  <meta property=’og:title’ content='Nathan Silva' />
-  <meta name="image" property=’og:image’ content='https://i.ibb.co/rpJqJvC/Screenshot-4.png' />
-  <meta property=’og:description’ content='Nathan da Silva portfolio.' />
-  <meta property=’og:url’ content='https://nathandasilva.com' />
+  <meta property='og:title' content='Nathan Silva' />
+  <meta name="image" property="og:image" content='https://i.ibb.co/rpJqJvC/Screenshot-4.png' />
+  <meta property='og:description' content='Nathan da Silva portfolio.' />
+  <meta property='og:url' content='https://nathandasilva.com' />
   <meta property='og:image:width' content='1200' />
   <meta property='og:image:height' content='627' />
 
